2007-08-06  Badlop  <badlop@ono.com>

	* src/mod_multicast.erl: Implement XEP33 limits: 2) report custom limits.

2007-08-05  Badlop  <badlop@ono.com>

	* src/mod_multicast.erl: Implement XEP33 limits: 1) read options.

2007-08-04  Badlop  <badlop@ono.com>

	* README.txt: Removed Changelog section.

	* ChangeLog: New file to track changes.

	* src/ejabberd_c2s.erl,
	  src/ejabberd_router.erl,
	  src/mod_muc_room.erl,
	  src/mod_multicast.erl: Update 
	  indentation using Emacs' erlang-mode.