@@ -1,3 +1,7 @@
+2007-08-07  Badlop  <badlop@ono.com>
+
+	* src/mod_multicast.erl: Fixed indentation.
+
 2007-08-06  Badlop  <badlop@ono.com>
 
 	* src/mod_multicast.erl: Implement XEP33 limits: 2) report custom limits.
